[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/icon.png" type="Texture" id=1]
[ext_resource path="res://src/character_selection.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "flash"
length = 0.42
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.596078, 1, 1, 1 ), Color( 0.384314, 1, 1, 1 ), Color( 0.133333, 1, 1, 1 ), Color( 0, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "flash"
length = 0.42
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.596078, 1, 1, 1 ), Color( 0.384314, 1, 1, 1 ), Color( 0.133333, 1, 1, 1 ), Color( 0, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "flash"
length = 0.42
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.596078, 1, 1, 1 ), Color( 0.384314, 1, 1, 1 ), Color( 0.133333, 1, 1, 1 ), Color( 0, 1, 1, 1 ) ]
}

[node name="CharSelection" type="Popup"]
rect_min_size = Vector2( 450, 140 )
rect_pivot_offset = Vector2( 225, 70 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 15.0
margin_top = 10.0
margin_right = 465.0
margin_bottom = 150.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Char1" type="TextureRect" parent="HBoxContainer"]
margin_right = 140.0
margin_bottom = 140.0
rect_min_size = Vector2( 140, 140 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer/Char1"]
anims/flash = SubResource( 1 )

[node name="Char2" type="TextureRect" parent="HBoxContainer"]
margin_left = 155.0
margin_right = 295.0
margin_bottom = 140.0
rect_min_size = Vector2( 140, 140 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer/Char2"]
anims/flash = SubResource( 2 )

[node name="Char3" type="TextureRect" parent="HBoxContainer"]
margin_left = 310.0
margin_right = 450.0
margin_bottom = 140.0
rect_min_size = Vector2( 140, 140 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer/Char3"]
anims/flash = SubResource( 3 )

[connection signal="selected" from="." to="." method="_on_CharSelection_selected"]
